hphp/test/zend/good/tests/classes/static_mix_1.php.expectf

Fatal error: Cannot change static method pass::show() to non-static in fail in %s/static_mix_1.php on line 9
